# CourierDB

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
courierdb/: __init__.py  cli.py  client.py
courierdb/core/: engine.py
courierdb/server/: app.py
docs/: install.md  mcp.md  n8n.md  schemas.md  sdk.md
