[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "courierdb"
version = "0.2.1"
description = "The AI-Native Database: JSON + Vectors + MCP"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["database", "ai", "vector", "rag", "mcp", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.124.0",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "lmdb==1.7.5",
    "usearch==2.21.0",
    "requests==2.32.5",
    "fastmcp==2.13.3",
    "python-dotenv==1.2.1",
    "openai==2.9.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "authlib==1.6.5",
    "beartype==0.22.8",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "cyclopts==4.3.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.3",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jiter==0.12.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "mcp==1.22.0",
    "mdurl==0.1.2",
    "openapi-pydantic==0.5.1",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "platformdirs==4.5.1",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "pycparser==2.23",
    "pydantic-settings==2.12.0",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyperclip==1.11.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "rich==14.2.0",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "simsimd==6.5.3",
    "sniffio==1.3.1",
    "sse-starlette==3.0.3",
    "starlette==0.50.0",
    "tqdm==4.67.1",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "urllib3==2.6.0",
    "websockets==15.0.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/courierdb"
Issues = "https://github.com/yourusername/courierdb/issues"

[project.scripts]
courierdb = "courierdb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["courierdb"]
exclude = ["Dockerfile", "docker-compose.yml", ".env", "tests"]
